@@ -20,19 +20,17 @@ class QueryParser {
   }
 
   String getParam(String param) {
-    ensureParsed();
-    return parsedQuery.get(param);
+    return ensureParsed().get(param);
   }
 
   boolean hasParam(String param) {
-    ensureParsed();
-    return parsedQuery.containsKey(param);
+    return ensureParsed().containsKey(param);
   }
 
-  private void ensureParsed() {
-    if (parsedQuery == null) {
+  private Map<String, String> ensureParsed() {
+    if (parsedQuery == null)
       parsedQuery = splitQuery(uri);
-    }
+    return parsedQuery;
   }
 
   @SneakyThrows
@@ -45,7 +43,7 @@ class QueryParser {
         int idx = pair.indexOf("=");
         String key = idx < 0 ? pair : pair.substring(0, idx);
         String val = idx < 0 ? "" : pair.substring(idx + 1);
-        queryPairs.put(URLDecoder.decode(key, UTF_8.name()), URLDecoder.decode(val, UTF_8.name()));
+        queryPairs.put(URLDecoder.decode(key, UTF_8), URLDecoder.decode(val, UTF_8));
       }
     }
     return queryPairs;
